--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
     ],
     "require": {
         "league/plates": "^3.5"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.6"
     }
 }
